module/core/variadic_from/tests/compile_fail/test_0_fields.rs
// tests/compile_fail/test_0_fields.rs

#[ allow( dead_code ) ]
#[ derive( variadic_from ::VariadicFrom ) ]
struct Test0FieldsNamed {}